--- a/index.html
+++ b/index.html
@@ -2,23 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Phone App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+
 </head>
 
-<body class="bg-dark text-light">
-    <h1 class="text-center h4 mt-2 ">Hello, world!</h1>
-    <div id="phones" class="container mt-5 d-flex justify-content-center gap-5 flex-wrap">
-        
+<body class="bg-dark text-white">
+    <h1 class="text-center mt-2">My Store</h1>
+
+    <div class="products mt-5 d-flex justify-content-center gap-4 flex-wrap">
+
     </div>
+
+    <div class="text-center m-5">
+        <button onclick="gotocart()" class="btn btn-primary">Checkout</button>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
+
 
 </html>
