--- a/cart.html
+++ b/cart.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cart</title>
+        <title>Checkout</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     
     <body class="bg-dark text-light">
-        <h1 class="text-center mt-3">Cart</h1>
+        <h1 class="text-center mt-3">Checkout</h1>
         <div class="mt-3 container"></div>
         <h1 class="text-center m-5" id="total-amount"></h1>
     
