--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="text-center m-5">
-        <button onclick="gotocart()" class="btn btn-primary">Checkout</button>
+        <button onclick="gotocart()" class="btn btn-primary">Bucket</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
