--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     
-    <body class="bg-dark text-light">
+    <body class="bg-info text-white">
         <h1 class="text-center mt-3">Checkout</h1>
         <div class="mt-3 container"></div>
         <h1 class="text-center m-5" id="total-amount"></h1>
