--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 </head>
 
-<body class="bg-dark text-white">
-    <h1 class="text-center mt-2">My Store</h1>
+<body class="bg-warning text-white">
+    <h1 class="text-center mt-2">Welcome To FAIQ'S Store</h1>
 
     <div class="products mt-5 d-flex justify-content-center gap-4 flex-wrap">
 
@@ -28,4 +28,4 @@
 </body>
 
 
-</html>
+</html> 
